# data_linking_exercise

./: main.py  pyproject.toml  readme.md
src/: schemas.py
