[tool.poetry]
name = "data_linking_exercise"
version = "0.1.0"
description = ""
authors = ["filipgeppert <filip.geppert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
mypy = "^0.942"
pandas = "^1.4.2"
pandera = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
